--- a/Objects/Lab8.build_log.htm
+++ b/Objects/Lab8.build_log.htm
@@ -22,15 +22,20 @@ Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
 E:\IDE\Lab8\Lab8.uvprojx
-Project File Date:  10/30/2024
+Project File Date:  11/06/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling Lab8-ADC.c...
-linking...
-Program Size: Code=12980 RO-data=676 RW-data=32 ZI-data=1120  
-".\Objects\Lab8.axf" - 0 Error(s), 0 Warning(s).
+Lab8-ADC.c(59): error:  #65: expected a ";"
+  			if((Vout>VoutThreshhold) && Timer1RunningFlag){
+Lab8-ADC.c(69): warning:  #12-D: parsing restarts here after previous syntax error
+  		}
+Lab8-ADC.c(75): error:  #20: identifier "BPM" is undefined
+  	sprintf(temp, "%f", BPM);
+Lab8-ADC.c: 1 warning, 2 errors
+".\Objects\Lab8.axf" - 2 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -48,20 +53,21 @@ Package Vendor: TexasInstruments
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Target_1
-  C:\Users\Kingsley\AppData\Local\Arm\Packs\ARM\CMSIS\5.9.0\CMSIS\Core\Include
-  C:\Users\Kingsley\AppData\Local\Arm\Packs\TexasInstruments\MSP432P4xx_DFP\3.2.6\Device\Include
+  C:\Users\kings\AppData\Local\Arm\Packs\ARM\CMSIS\5.9.0\CMSIS\Core\Include
+  C:\Users\kings\AppData\Local\Arm\Packs\TexasInstruments\MSP432P4xx_DFP\3.2.6\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: TexasInstruments::Device:Startup:3.2.2
-      Include file:  Device\Include\msp_compatibility.h
       Source file:   Device\Source\startup_msp432p401r_uvision.s
+      Include file:  Device\Include\msp_compatibility.h
+      Source file:   Examples\EmptyMain\main.c
       Source file:   Examples\BlinkLED\blinkLED.c
       Source file:   Device\Source\system_msp432p401r.c
-      Source file:   Examples\EmptyMain\main.c
-Build Time Elapsed:  00:00:02
+Target not created.
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
